# notepad_flask

./: .env  README.md  app.py  gunicorn.conf.py  pyproject.toml  requirements.txt
app/config/: sys_config.py
config/: conf.py
